--- a/index.html
+++ b/index.html
@@ -64,27 +64,21 @@
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Professional Experience</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
+								</header>								
+								<h3>IT Test Engineer Intern - Puget Sound Energy</h3>
+								<p>As an IT Test Engineer Intern, I obtained testing/quality assurance metrics from Azure DevOps and Visual Studio 
+									in C/C++ using a set of disparate tools like Power BI to aggregate this data and provide centralized 
+									visualizations of it for the development and leadership teams. I executed test plans and reports results to
+									ensure quality of components with oversight from Sr. QA Engineer. I was involved with sprint planning, daily
+									stand-ups for the teams, and communication for the stories, tasks, and bugs for my work utilizing Software 
+									Development Life Cycle and Scaled Agile. I curated my own dashboards with widgets on PSE about testing and bugs
+									for executive leaders to use in their future.
+									<br>
+									Applications used: Visual Studio, Azure DevOps, PowerBI, Tricentis Tosca, BrowserStack
+								</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href=https://www.linkedin.com/in/kevin-mach/ class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -96,21 +90,33 @@
 									<p class="content"> University of Washington - Seattle </p>
 									<div class="row">
 										<ul>
-											<li>Dolor pulvinar magna etiam.</li>
-											<li>Sagittis sed lorem adipiscing.</li>
-											<li>Felis enim etiam feugiat.</li>
-											<li>Ipsum lorem nullam consequat.</li>
+											<li>Calculus 3 (MATH 126)</li>
+											<li>Gender & Information Technology (INFO 102)</li>
+											<li>Intro to Statistical Methods (QMETH 201)</li>
+											<li>Intellectual Foundations (INFO 200)</li>
+											<li>Data Structures and Algorithms (CSE 373)</li>
+											<li>Explorations in Human Centered Design (HCDE 210)</li>
+											<li>Matrix Algebra (MATH 308)</li>
+											<li>Information Ethics and Policy (INFO 350)</li>
+											<li>Web Programming (CSE 154)</li>
+											<li>Information Systems Analysis and Design (INFO 380)</li>
+											<li>Software Architecture (INFO 498)</li>
 										</ul>
-										<div class="col-6 col-12-medium">
-											<h3>Seattle Pacific University</h3>
-											<ol>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis viverra.</li>
-												<li>Felis enim feugiat.</li>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis lorem.</li>
-												<li>Felis enim et feugiat.</li>
-											</ol>
+										<div class="row">
+											<p class="content">Seattle Pacific University</p>
+											<ul class>
+												<li>Algorithm Design and Analysis (CSC 3430)</li>
+												<li>Applications Programming (CSC 3220)</li>
+												<li>Computer Networks (CSC 4750)</li>
+												<li>Computer Organization and Assembly Language (CSC3 760)</li>
+												<li>Data Structures & Programming (CSC 2330)</li>
+												<li>Discrete Mathematics (MAT 2720)</li>
+												<li>Introduction to Data Science (DAT 3380)</li>
+												<li>Microcontroller System Design (CPE 3280)</li>
+												<li>Operating Systems Programming (CSC 3350)</li>
+												<li>Software Engineering I (CPE 4151)</li>
+												<li>Software Engineering II (CPE 4152)</li>
+											</ul>
 										</div>
 									</div>
 									<p>Here are some relevant classes. I took classes at the University of Washington - Seattle during 2016-2019 
@@ -153,7 +159,7 @@
 							-->
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon solid fa-file-alt alt"><span class="label">Twitter</span></a></li>
+								<li><a href="https://drive.google.com/file/d/1Pb3FnmPxK2c8sL35KhRfFj-ILneNZCJK/view?usp=sharing" class="icon solid fa-file-alt alt"><span class="label">Twitter</span></a></li>
 								<li><a href="mailto:machk@spu.edu" class="icon solid fa-envelope alt"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/in/kevin-mach/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.github.com/kevinmachh/" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
