finished intro page

--- a/index.html
+++ b/index.html
@@ -64,18 +64,20 @@
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Professional Experience</h2>
-								</header>								
-								<h3>IT Test Engineer Intern - Puget Sound Energy</h3>
-								<p>As an IT Test Engineer Intern, I obtained testing/quality assurance metrics from Azure DevOps and Visual Studio 
-									in C/C++ using a set of disparate tools like Power BI to aggregate this data and provide centralized 
-									visualizations of it for the development and leadership teams. I executed test plans and reports results to
-									ensure quality of components with oversight from Sr. QA Engineer. I was involved with sprint planning, daily
-									stand-ups for the teams, and communication for the stories, tasks, and bugs for my work utilizing Software 
-									Development Life Cycle and Scaled Agile. I curated my own dashboards with widgets on PSE about testing and bugs
-									for executive leaders to use in their future.
-									<br>
-									Applications used: Visual Studio, Azure DevOps, PowerBI, Tricentis Tosca, BrowserStack
-								</p>
+								</header>
+								<div class="professional"> 							
+									<h3><b>Puget Sound Energy</b> - IT Test Engineer Intern, Summer 2020</h3>
+									<p>As an IT Test Engineer Intern, I obtained testing/quality assurance metrics from Azure DevOps and Visual Studio 
+										in C/C++ using a set of disparate tools like Power BI to aggregate this data and provide centralized 
+										visualizations of it for the development and leadership teams. I executed test plans and reports results to
+										ensure quality of components with oversight from Sr. QA Engineer. I was involved with sprint planning, daily
+										stand-ups for the teams, and communication for the stories, tasks, and bugs for my work utilizing Software 
+										Development Life Cycle and Scaled Agile. I curated my own dashboards with widgets on PSE about testing and bugs
+										for executive leaders to use in their future.
+										<br>
+										Applications used: Visual Studio, Azure DevOps, PowerBI, Tricentis Tosca, BrowserStack
+									</p>
+								</div>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href=https://www.linkedin.com/in/kevin-mach/ class="button">Learn More</a></li>
@@ -87,24 +89,27 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Education</h2>
-									<p class="content"> University of Washington - Seattle </p>
-									<div class="row">
-										<ul>
-											<li>Calculus 3 (MATH 126)</li>
-											<li>Gender & Information Technology (INFO 102)</li>
-											<li>Intro to Statistical Methods (QMETH 201)</li>
-											<li>Intellectual Foundations (INFO 200)</li>
-											<li>Data Structures and Algorithms (CSE 373)</li>
-											<li>Explorations in Human Centered Design (HCDE 210)</li>
-											<li>Matrix Algebra (MATH 308)</li>
-											<li>Information Ethics and Policy (INFO 350)</li>
-											<li>Web Programming (CSE 154)</li>
-											<li>Information Systems Analysis and Design (INFO 380)</li>
-											<li>Software Architecture (INFO 498)</li>
-										</ul>
+									<div class="majors">
 										<div class="row">
-											<p class="content">Seattle Pacific University</p>
-											<ul class>
+											<p class="content">University of Washington - Seattle (3.31 GPA)</p>
+											<ul>
+												<li>Calculus 3 (MATH 126)</li>
+												<li>Gender & Information Technology (INFO 102)</li>
+												<li>Intro to Statistical Methods (QMETH 201)</li>
+												<li>Intellectual Foundations (INFO 200)</li>
+												<li>Data Structures and Algorithms (CSE 373)</li>
+												<li>Explorations in Human Centered Design (HCDE 210)</li>
+												<li>Matrix Algebra (MATH 308)</li>
+												<li>Information Ethics and Policy (INFO 350)</li>
+												<li>Web Programming (CSE 154)</li>
+												<li>Information Systems Analysis and Design (INFO 380)</li>
+												<li>Software Architecture (INFO 498)</li>
+											</ul>
+										</div>
+
+										<div class="row">
+											<p class="content">Seattle Pacific University (3.30 GPA)</p>
+											<ul>
 												<li>Algorithm Design and Analysis (CSC 3430)</li>
 												<li>Applications Programming (CSC 3220)</li>
 												<li>Computer Networks (CSC 4750)</li>
@@ -119,20 +124,20 @@
 											</ul>
 										</div>
 									</div>
-									<p>Here are some relevant classes. I took classes at the University of Washington - Seattle during 2016-2019 
-										in hopes to get into my major that I aspired to be in (Computer Science and Informatics) but I had a tough
-										time adjusting to the curriculum along with being waitlisted from the major. During this time, the majors
-										were switching over to direct admission focused while I was a Sophomore. The capacity constrained program 
-										lead me to find an alternative option, Seattle Pacific University, as I was determined to graduate with a
-										Computer Science degree regardless of the school because I know that this is what I want to do. 
-									</p>
 								</header>
+								<p>Here are some relevant classes. I took classes at the University of Washington - Seattle during 2016-2019 
+									in hopes to get into my major that I aspired to be in (Computer Science and Informatics) but I had a tough
+									time adjusting to the curriculum along with being waitlisted from the major. During this time, the majors
+									were switching over to direct admission focused while I was a Sophomore. The capacity constrained program 
+									lead me to find an alternative option, Seattle Pacific University, as I was determined to graduate with a
+									Computer Science degree regardless of the school because I know that this is what I want to do. 
+								</p>
 							</section>
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>MORE about me</h2>
+									<h2>Portfolio</h2>
 									<p>I have some creative hobbies</p>
 								</header>
 								<footer class="major">
