--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										</div>
 
 										<div class="row">
-											<p class="content">Seattle Pacific University (3.30 GPA)</p>
+											<p class="content">(Graduated) Seattle Pacific University (3.30 GPA)</p>
 											<ul>
 												<li>Algorithm Design and Analysis (CSC 3430)</li>
 												<li>Applications Programming (CSC 3220)</li>
