--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/profile.png" alt="" /></span>
+						<span class="logo"><img src="images/profile2.png" alt="" /></span>
 						<h1>Kevin Mach</h1>
 						<p>Recently graduated from Seattle Pacific University with a Bachelor's in Computer Science.</p>
 					</header>
@@ -56,7 +56,7 @@
 											<li><a href=https://www.linkedin.com/in/kevin-mach/ class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/profile2.png" alt="" /></span>
+									<span class="image"><img src="images/profile.png" alt="" /></span>
 								</div>
 							</section>
 
@@ -142,7 +142,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">???</a></li>
+										<li><a href="generic.html" class="button primary">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
