--- a/generic.html
+++ b/generic.html
@@ -28,11 +28,40 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>Work in Progress!</h2>
-								<p>Place holder.</p>
-								<h2>Hi there</h2>
-								<p>Thanks for lurking!</p>
+								<h2>IT Test Engineer</h2>
+								<h3>Puget Sound Energy</h3>
+								<p>June 2020 - Sept 2020</p>
+								<ul>
+									<li>Obtaining testing/quality assurance metrics from Azure DevOps and Visual Studio in C/C++ using a set of disparate tools like Power BI to aggregate this data and provide centralized visualizations of it for the development and leadership teams.</li>
+									<li>Executes existing test plans and reports results to ensure quality of components with oversight from Sr. QA Engineer.</li>
+									<li>Participated in sprint planning, daily stand-ups for the teams, and communication for the stories, tasks, and bugs for my work utilizing Software Development Life Cycle and Scaled Agile.</li>
+									<li>Curated my own dashboards with widgets on PSE about testing and bugs for executive leaders.</li>
+									<li>Applications used: Visual Studio, Azure DevOps, PowerBI, Tricentis Tosca, BrowserStack</li>
+								</ul>
+								<br>
+								<h2>Education Express</h2>
+								<h3>University of Washington - Course Project</h3>
+								<p>January 2017 - March 2017</p>
+								<ul>
+									<li>Curated an education app that is a token based progression system with customizable avatars that was included in their story problems.</li>
+									<li>User Research on students with attention deficit problems</li>
+									<li>Team Project with four people for a class final project</li>
+									<li>Role: Main researcher, framework/UI designer</li>
+									<li>Applications used: Figma, Invision</li>
+								</ul>
+								<br>
+								<h2>Exploring Meteorite Data</h2>
+								<h3>University of Washington - Course Project</h3>
+								<p>January 2017 - March 2017</p>
+								<ul>
+									<li>Displays information about where meteorites have fallen in the U.S.</li>
+									<li>Pulled data from NASA public resource on Kaggle as a CSV file.</li>
+									<li>Role: Programmer using R</li>
+									<li>Applications used: R Studio, Shiny web app</li>
+									<li>https://kevinmachh.shinyapps.io/Info201-Final-Project-Group-5-AF/</li>
+								</ul>
+								<br>
+
 							</section>
 
 					</div>
@@ -41,6 +70,7 @@
 					<footer id="footer">
 						<section>
 							<ul class="actions">
+								<p>Home</p>
 								<li><a href="index.html" class="button">Back Home</a></li>
 							</ul>
 						</section>
