--- a/generic.html
+++ b/generic.html
@@ -58,7 +58,7 @@
 									<li>Pulled data from NASA public resource on Kaggle as a CSV file.</li>
 									<li>Role: Programmer using R</li>
 									<li>Applications used: R Studio, Shiny web app</li>
-									<li>https://kevinmachh.shinyapps.io/Info201-Final-Project-Group-5-AF/</li>
+									<li><a href="https://kevinmachh.shinyapps.io/Info201-Final-Project-Group-5-AF/">Visit our project here!</a></li>
 								</ul>
 								<br>
 
