--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Creative Projects</h1>
+						<h1>Projects</h1>
 						<p>Technical and Non-technical</p>
 					</header>
 
@@ -28,26 +28,57 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<h2>IT Test Engineer</h2>
-								<h3>Puget Sound Energy</h3>
-								<p>June 2020 - Sept 2020</p>
+								<br>
+								<h2>Rock Paper Scissors</h2>
+								<h3>Personal Project</h3>
+								<p>January 2022</p>
 								<ul>
-									<li>Obtaining testing/quality assurance metrics from Azure DevOps and Visual Studio in C/C++ using a set of disparate tools like Power BI to aggregate this data and provide centralized visualizations of it for the development and leadership teams.</li>
-									<li>Executes existing test plans and reports results to ensure quality of components with oversight from Sr. QA Engineer.</li>
-									<li>Participated in sprint planning, daily stand-ups for the teams, and communication for the stories, tasks, and bugs for my work utilizing Software Development Life Cycle and Scaled Agile.</li>
-									<li>Curated my own dashboards with widgets on PSE about testing and bugs for executive leaders.</li>
-									<li>Applications used: Visual Studio, Azure DevOps, PowerBI, Tricentis Tosca, BrowserStack</li>
+									<li>Learned about Python and Tkinter library to create a desktop application</li>
+									<li>Created a game of rock paper scissors and learned other widgets like calculators</li>
+									<li>Converted the Tkinter app into an EXE file to play offline</li>
+									<li>Applications used: Python, Tkinter library</li>
+								</ul>
+								<br>
+								<h2>PLOT Project</h2>
+								<h3>School Capstone Project</h3>
+								<p>Jan 2021 - June 2021</p>
+								<ul>
+									<li>Electron and Javascript application that stores books based on info inputted by the user into an SQLite library</li>									
+									<li>Connected codebase with Google Books API, implemented a search index, and integrated with the front-end</li>
+									<li>Lead a team of five as Scrum Master by delegating tasks and communicating on the Trello Board during sprints</li>
+									<li>Demoed our project at the Erickson Conference and Board of Advisors for Engineering and Computer Science</li>
+								</ul>
+								<br>
+								<h2>COVID-19 Data Wrangling</h2>
+								<h3>School Project</h3>
+								<p>Sept 2020 - Dec 2020</p>
+								<ul>
+									<li>Created an interactive infographic involving extracting data from a CSV dataset from a public database provided
+										by Boston University that projected COVID-19 infections and death rate locations found across the world.</li>									
+									<li>Utilized R and ShinyApp library to publish as a public website with up-to-date information</li>
+								</ul>
+								<br>
+								<h2>Multiplayer Labyrinth</h2>
+								<h3>DubHacks Hackathon Project</h3>
+								<p>Oct 2019</p>
+								<ul>
+									<li>Partnered with a team of three to create a console-based labyrinth game with multiplayer support</li>									
+									<li>Built components to manage concurrent WebSocket connections needed for a multiplayer game</li>
+									<li>Contributed the underlying data structures for the labyrinth and game state</li>
+									<li>Designed to follow a client-server architecture along with a model view controller design style in TypeScript</li>
 								</ul>
 								<br>
 								<h2>Education Express</h2>
 								<h3>University of Washington - Course Project</h3>
-								<p>January 2017 - March 2017</p>
+								<p>January 2018 - March 2018</p>
 								<ul>
 									<li>Curated an education app that is a token based progression system with customizable avatars that was included in their story problems.</li>
 									<li>User Research on students with attention deficit problems</li>
 									<li>Team Project with four people for a class final project</li>
 									<li>Role: Main researcher, framework/UI designer</li>
 									<li>Applications used: Figma, Invision</li>
+									
+									<li><a href="https://www.figma.com/proto/eFquMOjhHCy8Mpca8uD13k/Education-Express-(Copy)?node-id=1%3A3/">Visit our project here!</a></li>
 								</ul>
 								<br>
 								<h2>Exploring Meteorite Data</h2>
@@ -58,22 +89,21 @@
 									<li>Pulled data from NASA public resource on Kaggle as a CSV file.</li>
 									<li>Role: Programmer using R</li>
 									<li>Applications used: R Studio, Shiny web app</li>
-									<li><a href="https://kevinmachh.shinyapps.io/Info201-Final-Project-Group-5-AF/">Visit our project here!</a></li>
+									<a href="https://kevinmachh.shinyapps.io/Info201-Final-Project-Group-5-AF/" class="button">Visit Project</a>
 								</ul>
 								<br>
-
+								<br>
+								<a href="index.html" class="button">Back Home</a>
 							</section>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<ul class="actions">
-								<p>Home</p>
-								<li><a href="index.html" class="button">Back Home</a></li>
-							</ul>
+						
+						<section></section>
 						</section>
+						<br>
 						<section>
 							<h2>Contact Me!</h2>
 							<dl class="alt">
